Fixed background image not covering the site properly

--- a/site.css
+++ b/site.css
@@ -1,6 +1,9 @@
 table {
     text-align: center;
     font-size: 20px;
+    background-color: white;
+    margin: 0 auto 0 auto;
+    overflow: hidden; 
 }
 
 tr, th {
@@ -17,7 +20,7 @@ html {
     background-image: url("ssbuBanner.jpg");
     background-position: center bottom;
     background-repeat: no-repeat;
-    background-size: 210%;
+    background-size: cover;
     background-origin: padding-box;
 }
 
